Added elapsed and remaining time for the current week